--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 *{
 	box-sizing: border-box;
  }
@@ -131,4 +133,8 @@ button[disabled=disabled], button:disabled {
 
 .campo-invalido{
 	border: 1px solid red;
+}
+
+.paciente-invalido{
+	background-color: orange;
 }
