--- a/css/index.css
+++ b/css/index.css
@@ -138,3 +138,7 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
 	background-color: orange;
 }
+
+#mensagens-erro{
+	color: red;
+}
