--- a/css/index.css
+++ b/css/index.css
@@ -142,3 +142,8 @@ button[disabled=disabled], button:disabled {
 #mensagens-erro{
 	color: red;
 }
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
